--- a/casaberriel-backend/src/main/resources/static/locales/es.json
+++ b/casaberriel-backend/src/main/resources/static/locales/es.json
@@ -32,7 +32,7 @@
 		"check_out": "Antes de las 11:00am",
 		"available": "Disponible",
 		"not_available": "No disponble",
-		"no_rooms": "La casa está completa en las fechas seleccionadas, por favor selecciona otras fechas.",
+		"no_rooms": "La casa está completa en las fechas seleccionadas, por favor selecciona otras fechas o contacta con nostros para más información.",
 		"houseAvailable": "La casa está disponible en las fechas seleccionadas, por favor completa el formulario para hacer la reserva.",
 		"makebooking": "Hacer Reserva",
 		"head_login": "Para reservar inicia sesión o registrate",
