--- a/casaberriel-backend/src/main/resources/static/locales/en.json
+++ b/casaberriel-backend/src/main/resources/static/locales/en.json
@@ -24,7 +24,7 @@
 		"total_price": "Total Price",
 		"price": "Price per night: ",
 		"stay": "Minimum stay: ",
-		"nights": "2 nights",
+		"nights": "The minimum stay is 1 night. Please adjust the dates.",
 		"accions": "Accions",
 		"check_available": "Check Availability",
 		"arrival": "Arrival date: ",
