--- a/casaberriel-backend/src/main/resources/static/locales/es.json
+++ b/casaberriel-backend/src/main/resources/static/locales/es.json
@@ -24,7 +24,7 @@
 		"total_price": "Precio Total",
 		"price": "Precio/noche: ",
 		"stay": "Estancia mínima: ",
-		"nights": "2 noches",
+		"nights": "La estancia mínima es de 1 noche. Por favor, ajusta las fechas.",
 		"accions": "Acciones",
 		"check_available": "Ver disponibilidad",
 		"arrival": "Fecha de entrada: ",
